--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+Задание2:
 0) Имеется список парка машин Car(String model, String type). Необходимо разбить его на списки сгруппированные по type
 [Исходные данные: текстовый файл со средней длиной строки равной 10 символам]
 1) Подсчитайте количество различных слов в файле
